@@ -1,0 +1,13 @@
+﻿using System.Windows;
+using System.Windows.Controls;
+
+namespace ElementFinder.Controls
+{
+    public class CloseButton : Button
+    {
+        static CloseButton()
+        {
+            DefaultStyleKeyProperty.OverrideMetadata(typeof(CloseButton), new FrameworkPropertyMetadata(typeof(CloseButton)));
+        }
+    }
+}
