@@ -9,7 +9,7 @@
                 <ControlTemplate TargetType="{x:Type Controls:CopyableTextBox}">
                     <Grid>
                         <TextBox Text="{TemplateBinding Text}" IsReadOnly="True" />
-                        <Button Content="c" Padding="4,0" Margin="0,0,2,1" HorizontalAlignment="Right" VerticalAlignment="Center" x:Name="PART_CopyButton" ToolTip="{TemplateBinding CopyButtonToolTip}" />
+                        <Controls:CopyButton HorizontalAlignment="Right" x:Name="PART_CopyButton" ToolTip="{TemplateBinding CopyButtonToolTip}" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -50,10 +50,12 @@
 
     <Style TargetType="{x:Type Controls:ToggleSlider}">
         <Setter Property="Width" Value="30" />
+        <Setter Property="Height" Value="20" />
+        <Setter Property="Background" Value="White" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Border BorderBrush="Brown" BorderThickness="1" x:Name="PART_Section" ToolTip="Deactivated; Click to activate" Background="White">
+                    <Border BorderBrush="Brown" BorderThickness="1" x:Name="PART_Section" ToolTip="Deactivated; Click to activate" Background="{TemplateBinding Background}">
                         <DockPanel>
                             <Border Width="10" BorderThickness="1" BorderBrush="Gray" x:Name="PART_Slider" DockPanel.Dock="Left">
                                 <Border.Background>
@@ -76,6 +78,100 @@
                             <Setter TargetName="PART_State" Property="Text" Value="1" />
                             <Setter TargetName="PART_State" Property="DockPanel.Dock" Value="Left" />
                             <Setter TargetName="PART_Section" Property="ToolTip" Value="Activated; Click to Deactivate" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="LightBlue" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type Controls:ViewChangeButton}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="Brown" />
+        <Setter Property="Width" Value="20" />
+        <Setter Property="Height" Value="20" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Controls:ViewChangeButton}">
+                    <Border BorderBrush="{TemplateBinding Foreground}" BorderThickness="1" Background="{TemplateBinding Background}">
+                        <Path x:Name="PART_Arrow"
+                                Data="M 1,4.5 L 4.5,1 8,4.5"
+                                HorizontalAlignment="Center"
+                                SnapsToDevicePixels="false"
+                                Stroke="{TemplateBinding Foreground}"
+                                StrokeThickness="2"
+                                VerticalAlignment="Center"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMinimized" Value="True">
+                            <Setter TargetName="PART_Arrow" Property="Data" Value="M 1,1.5 L 4.5,5 8,1.5" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="LightBlue" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type Controls:CloseButton}">
+        <Setter Property="Foreground" Value="Brown" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderBrush" Value="Transparent" />
+        <Setter Property="Width" Value="20" />
+        <Setter Property="Height" Value="20" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Controls:CloseButton}">
+                    <Border BorderBrush="Brown" BorderThickness="1" Background="{TemplateBinding Background}">
+                        <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Height="9" Width="9">
+                            <Line Stretch="Fill" X1="0" Y1="0" X2="1" Y2="1" Stroke="{TemplateBinding Foreground}" StrokeThickness="1.5" />
+                            <Line Stretch="Fill" X1="1" Y1="0" X2="0" Y2="1" Stroke="{TemplateBinding Foreground}" StrokeThickness="1.5" />
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#FFFF6666" />
+                            <Setter Property="Foreground" Value="WhiteSmoke" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type Controls:ResizeThumb}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Controls:ResizeThumb}">
+                    <Border Background="LightSkyBlue" Cursor="SizeWE" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type Controls:CopyButton}">
+        <Setter Property="Foreground" Value="Brown" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Width" Value="20" />
+        <Setter Property="Margin" Value="1" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Controls:CopyButton}">
+                    <Border BorderBrush="Brown" BorderThickness="1,0,0,0" Background="{TemplateBinding Background}">
+                        <TextBlock Text="c" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,2" Foreground="{TemplateBinding Foreground}" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="LightBlue" />
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="Foreground" Value="WhiteSmoke" />
+                            <Setter Property="Background" Value="Gray" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
