@@ -3,6 +3,7 @@
 ==============================
 Release 2.*
 ==============================
+2014-07-05    ElementFinder: Style controls
 2014-07-04    ElementFinder: Add ElementObserver to detect if an element disappears to close the highlighter automatically
 2014-07-03    ElementFinder: Add possibility to keep element highlighter position and size up to date
 2014-07-02    ElementFinder: Change default value of the LeftColumnWidth from 50 to 230
